@startuml
skinparam classAttributeIconSize 0
scale 4096 width
title 选择性搜索算法 - 相似度计算

segmentation.SelectiveSearchSegmentationStrategy <.. segmentation.SelectiveSearchSegmentation

segmentation.SelectiveSearchSegmentationStrategyColor <.. segmentation.SelectiveSearchSegmentationImpl

segmentation.SelectiveSearchSegmentationStrategyTexture <.. segmentation.SelectiveSearchSegmentationImpl

segmentation.SelectiveSearchSegmentationStrategyFill <.. segmentation.SelectiveSearchSegmentationImpl

segmentation.SelectiveSearchSegmentationStrategySize <.. segmentation.SelectiveSearchSegmentationImpl

segmentation.SelectiveSearchSegmentationStrategyMultiple <.. segmentation.SelectiveSearchSegmentationImpl

' 分割策略

segmentation.SelectiveSearchSegmentationStrategy <|-- segmentation.SelectiveSearchSegmentationStrategyColor

segmentation.SelectiveSearchSegmentationStrategy <|-- segmentation.SelectiveSearchSegmentationStrategyTexture

segmentation.SelectiveSearchSegmentationStrategy <|-- segmentation.SelectiveSearchSegmentationStrategyFill

segmentation.SelectiveSearchSegmentationStrategy <|-- segmentation.SelectiveSearchSegmentationStrategySize

segmentation.SelectiveSearchSegmentationStrategy <|-- segmentation.SelectiveSearchSegmentationStrategyMultiple

segmentation.SelectiveSearchSegmentationStrategyColor <|-- segmentation.SelectiveSearchSegmentationStrategyColorImpl

segmentation.SelectiveSearchSegmentationStrategyTexture <|-- segmentation.SelectiveSearchSegmentationStrategyTextureImpl

segmentation.SelectiveSearchSegmentationStrategyFill <|-- segmentation.SelectiveSearchSegmentationStrategyFillImpl

segmentation.SelectiveSearchSegmentationStrategySize <|-- segmentation.SelectiveSearchSegmentationStrategySizeImpl

segmentation.SelectiveSearchSegmentationStrategyMultiple <|-- segmentation.SelectiveSearchSegmentationStrategyMultipleImpl

class segmentation.SelectiveSearchSegmentationStrategy {
    + virtual void setImage(cv::InputArray img, cv::InputArray regions, cv::InputArray sizes, int image_id = -1) = 0
    + virtual float get(int r1, int r2) = 0
    + virtual void merge(int r1, int r2) = 0
}

class segmentation.SelectiveSearchSegmentationStrategyColorImpl {
    - std::string name_
    - cv::Mat histograms
    - cv::Mat sizes
    - int histogram_size
    - int last_image_id
    - cv::Mat last_histograms
    __
    + SelectiveSearchSegmentationStrategyColorImpl()
    .. override ..
    + virtual void setImage(cv::InputArray img, cv::InputArray regions, cv::InputArray sizes, int image_id = -1) override
    + virtual float get(int r1, int r2) override
    + virtual void merge(int r1, int r2) override
}

class segmentation.SelectiveSearchSegmentationStrategyTextureImpl {
    - std::string name_
    - cv::Mat histograms
    - cv::Mat sizes
    - int histogram_size
    - int last_image_id
    - cv::Mat last_histograms
    __
    + SelectiveSearchSegmentationStrategyTextureImpl()
    .. override ..
    + virtual void setImage(cv::InputArray img, cv::InputArray regions, cv::InputArray sizes, int image_id = -1) override
    + virtual float get(int r1, int r2) override
    + virtual void merge(int r1, int r2) override
}

class segmentation.SelectiveSearchSegmentationStrategyFillImpl {
    - std::string name_
    - cv::Mat sizes
    - int size_image
    - std::vector<cv::Rect> bounding_rects
    __
    + SelectiveSearchSegmentationStrategyFillImpl()
    .. override ..
    + virtual void setImage(cv::InputArray img, cv::InputArray regions, cv::InputArray sizes, int image_id = -1) override
    + virtual float get(int r1, int r2) override
    + virtual void merge(int r1, int r2) override
}

class segmentation.SelectiveSearchSegmentationStrategySizeImpl {
    - std::string name_
    - cv::Mat sizes
    - int size_image
    __
    + SelectiveSearchSegmentationStrategySizeImpl()
    .. override ..
    + virtual void setImage(cv::InputArray img, cv::InputArray regions, cv::InputArray sizes, int image_id = -1) override
    + virtual float get(int r1, int r2) override
    + virtual void merge(int r1, int r2) override
}

class segmentation.SelectiveSearchSegmentationStrategyMultiple {
    + virtual void addStrategy(std::shared_ptr<SelectiveSearchSegmentationStrategy> g, float weight) = 0
    + virtual void clearStrategies() = 0
}

class segmentation.SelectiveSearchSegmentationStrategyMultipleImpl {
    - std::string name_
    - std::vector<std::shared_ptr<SelectiveSearchSegmentationStrategy> > strategies
    - std::vector<float> weights
    - float weights_total
    __
    + SelectiveSearchSegmentationStrategyMultipleImpl()
    .. override ..
    + virtual void setImage(cv::InputArray img, cv::InputArray regions, cv::InputArray sizes, int image_id = -1) override
    + virtual float get(int r1, int r2) override
    + virtual void merge(int r1, int r2) override
    + virtual void addStrategy(std::shared_ptr<SelectiveSearchSegmentationStrategy> g, float weight) override
    + virtual void clearStrategies() override
}

@enduml